# NoodleMcp

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
src/catch_knowledge/: __init__.py  cli.py  config.py  domain.py  manual_import.py  obsidian_sync.py  scheduler.py  storage.py
src/catch_knowledge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/catch_knowledge/adapters/: __init__.py  qq_napcat.py
src/catch_knowledge/db/: __init__.py  migrate.py  models.py  session.py
src/catch_knowledge/exporters/: markdown.py
src/catch_knowledge/indexing/: __init__.py  questions.py
src/catch_knowledge/llm/: __init__.py  analyzer.py  schemas.py
src/catch_knowledge/ocr/: __init__.py  volcengine.py
src/catch_knowledge/pipeline/: __init__.py  run.py
src/catch_knowledge/sources/: __init__.py  base.py  nowcoder.py  playwright_support.py  xiaohongshu_mcp.py
src/catch_knowledge/web/: __init__.py  app.py
src/catch_knowledge/web/static/: styles.css
src/catch_knowledge/web/templates/: dashboard.html  post_detail.html
